[package]
name = "onek-btc-challenge-cpu"
version = "0.1.0"
edition = "2024"

[dependencies]
base58ck = "0.2.0"
bitcoin_hashes = "0.16.0"
bnum = { version = "0.13.0", features = ["nightly", "rand"] }
hex = "0.4.3"
log = "0.4.27"
rand = "0.8"
secp256k1 = { version = "0.31.0", features = ["global-context"] }
simple_logger = "5.0.0"

[profile.release]
codegen-units = 1
lto = "fat"
